--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lib": "lib",
     "test": "tests"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts" : { 
+    "test" : "jest" 
   },
   "repository": {
     "type": "git",
